# fasttext_binary_jawiki

./: .flake8  .gitignore  Makefile  README.md  convert_extracted.py  create_corpus_jawiki.py  create_fasttext_binary.py  dicrc  download_jawiki.py  pyproject.toml  requirements.txt  w2v.py
ipynb/: approx.ipynb  ldcc2jsonl.py
src/: downloader.py  extractor.py  title_extractor.py  title_parser.py  title_replacer.py  tokenize_gnome.py  tokenizer.py  trainer.py  utils.py
testdata/test/: test
tests/: test_title_extractor.py  test_title_parser.py  test_title_replacer.py  test_tokenizer.py
